# pgaa

./: .claude_resources.json  .gitignore  .zenodo.json  CITATION.cff  DATASET_MANIFEST.tsv  MANUSCRIPT.docx  MANUSCRIPT.md  README.md  RELEASE_ARCHIVE_CHECKLIST.md  REQUIREMENTS.txt  SUPPLEMENTARY.md  UPLOAD_FILE_MANIFEST.tsv  build_pdf.py  codemeta.json  environment.yml  pyproject.toml  requirements.txt
COMMUNICATIONS_AI_COMPUTING_TRANSFER/: CAIC_OFFICIAL_REQUIREMENT_MAPPING_AUDIT_2026-06-25.md  CAIC_TRANSFER_READY_2026-06-23.md  CHANGE_LOG_CAIC_COMPUTATIONAL_REVISION_2026-06-27.md  DEEP_CURRENT_SUBMISSION_AUDIT_2026-06-25.md  EXTERNAL_LINK_RESOLUTION_AUDIT_2026-06-25.json  EXTERNAL_LINK_RESOLUTION_AUDIT_2026-06-25.md  FIGURE_TABLE_REFERENCE_CITATION_AUDIT_2026-06-24.md  FIGURE_TABLE_REFERENCE_CITATION_AUDIT_2026-06-26.md  FIGURE_TABLE_REFERENCE_CITATION_AUDIT_2026-06-28.md  FINAL_ALL_CHECKS_REPORT_2026-06-28.md  FINAL_NUMERIC_AND_SOURCE_TRACE_AUDIT_2026-06-29.md  FINAL_PRESUBMISSION_QA_CAIC_2026-06-27.md  FINAL_RISK_REGISTER_CAIC_2026-06-28.md  FINAL_SUBMISSION_HARDENING_REPORT_2026-06-30.md  FINAL_SUBMISSION_HARDENING_REPORT_CAIC_2026-06-27.md  FINAL_SUBMISSION_HARDENING_REPORT_CAIC_2026-06-28.md  FINAL_UPLOAD_STRICT_AUDIT_2026-06-25.md  MANUSCRIPT_CAIC.md  MATH_FORMULA_QC_2026-06-26.md  NON_MANUAL_PRESUBMISSION_CHECKS_2026-06-28.md  OVERCLAIM_TERMINOLOGY_QC_2026-06-26.md  PORTAL_INPUTS_COMMUNICATIONS_AI_COMPUTING.md  REFERENCE_EXTERNAL_AUDIT_CROSSREF.json  REFERENCE_EXTERNAL_AUDIT_PUBMED.json  REFERENCE_TRUTHFULNESS_AUDIT_CAIC_2026-06-28.md  SUPPLEMENTARY_CAIC.md  (+35 more)
(+372 files in other folders)
