[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgaa"
version = "0.1.0"
description = "Distribution-aware testing for single-cell perturbation screens"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PGAA Team"}
]
keywords = ["single-cell", "perturb-seq", "perturbation", "transcriptomics", "wasserstein", "persistent-homology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "scanpy>=1.9",
    "anndata>=0.8",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "statsmodels>=0.13",
    "joblib>=1.0",
]

[project.optional-dependencies]
gpu = ["cupy-cuda11x", "cuml", "cugraph"]
dev = ["pytest>=7.0", "pytest-cov", "black", "flake8", "mypy"]

[project.urls]
Homepage = "https://github.com/xutaoguo55/pgaa"
Repository = "https://github.com/xutaoguo55/pgaa"

[project.scripts]
pgaa-run = "pgaa.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pgaa*"]
